# Chat-with-history

./: README.md  app.py  chain_setup.py  embedd_files.py  embedder.py  pyproject.toml
books/: blog.txt
